[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Thorn/tile_0183.png" type="Texture" id=1]
[ext_resource path="res://Assets/Thorn/tile_0203.png" type="Texture" id=2]
[ext_resource path="res://Scenes/PlatformThorns/PlatformThorns.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 5 )

[node name="PlatformThorns" type="Area2D"]
script = ExtResource( 3 )

[node name="ThornUp" type="Node2D" parent="."]
visible = false

[node name="Up" type="Sprite" parent="ThornUp" groups=[
"ThornUp",
]]
position = Vector2( -72, 8 )
texture = ExtResource( 1 )
offset = Vector2( 80, -16 )

[node name="Up_2" type="Sprite" parent="ThornUp" groups=[
"ThornUp",
]]
position = Vector2( -144, 0 )
texture = ExtResource( 1 )
offset = Vector2( 168, -8 )

[node name="Up_3" type="Sprite" parent="ThornUp" groups=[
"ThornUp",
]]
position = Vector2( -128, 0 )
texture = ExtResource( 1 )
offset = Vector2( 168, -8 )

[node name="Up_4" type="Sprite" parent="ThornUp" groups=[
"ThornUp",
]]
position = Vector2( -112, 0 )
texture = ExtResource( 1 )
offset = Vector2( 168, -8 )

[node name="ThornDown" type="Node2D" parent="."]

[node name="Down" type="Sprite" parent="ThornDown" groups=[
"ThornDown",
]]
position = Vector2( 8, -8 )
texture = ExtResource( 2 )

[node name="Down_2" type="Sprite" parent="ThornDown" groups=[
"ThornDown",
]]
position = Vector2( 24, -8 )
texture = ExtResource( 2 )

[node name="Down_3" type="Sprite" parent="ThornDown" groups=[
"ThornDown",
]]
position = Vector2( 40, -8 )
texture = ExtResource( 2 )

[node name="Down_4" type="Sprite" parent="ThornDown" groups=[
"ThornDown",
]]
position = Vector2( 56, -8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"ThornUp",
]]
position = Vector2( 32, -5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5
one_shot = true

[node name="Delay" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_PlatformThorns_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PlatformThorns_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
